--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ flask-cors = "*"
 flask-jwt-extended = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
